--- a/QLTVBUS/QLTVBUS.vbproj
+++ b/QLTVBUS/QLTVBUS.vbproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocGiaBUS.vb" />
+    <Compile Include="LoaiDocGiaBUS.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
