--- a/QLTVGUI/QLTVGUI.vbproj
+++ b/QLTVGUI/QLTVGUI.vbproj
@@ -102,6 +102,12 @@
       <DependentUpon>frmMain.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmThemLoaiDocGia.Designer.vb">
+      <DependentUpon>frmThemLoaiDocGia.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmThemLoaiDocGia.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -124,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThemLoaiDocGia.resx">
+      <DependentUpon>frmThemLoaiDocGia.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
