--- a/QLTVGUI/App.config
+++ b/QLTVGUI/App.config
@@ -11,7 +11,7 @@
     </startup>
 
  <appSettings>
-    <add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>
+    <add key="ConnectionString" value="Data Source=DESKTOP-4MQAGL7;Initial Catalog=QLTV;Integrated Security=True"/>
     <!--<add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>-->
     <add key="MSDGFORMAT"  value="" />
   </appSettings>
