form thêm sách + thêm thể loại sách ( no bug)

--- a/QLTVDAL/QLTVDAL.vbproj
+++ b/QLTVDAL/QLTVDAL.vbproj
@@ -82,6 +82,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="SachDAL.vb" />
+    <Compile Include="TheLoaiSachDAL.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
