--- a/QLTVGUI/App.config
+++ b/QLTVGUI/App.config
@@ -1,17 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
-    <connectionStrings>
-        <add name="QLTVGUI.My.MySettings.QLTVConnectionString" connectionString="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
-    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-
  <appSettings>
-    <add key="ConnectionString" value="Data Source=DESKTOP-4MQAGL7;Initial Catalog=QLTV;Integrated Security=True"/>
+    <add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>
     <!--<add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>-->
     <add key="MSDGFORMAT"  value="" />
   </appSettings>
