--- a/QLTVGUI/QLTVGUI.vbproj
+++ b/QLTVGUI/QLTVGUI.vbproj
@@ -126,6 +126,12 @@
     <Compile Include="frmThemSach.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmThemTheLoaiSach.Designer.vb">
+      <DependentUpon>frmThemTheLoaiSach.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmThemTheLoaiSach.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -168,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmThemSach.resx">
       <DependentUpon>frmThemSach.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmThemTheLoaiSach.resx">
+      <DependentUpon>frmThemTheLoaiSach.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
