--- a/QLTVGUI/App.config
+++ b/QLTVGUI/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
  <appSettings>
-    <add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>
+    <add key="ConnectionString" value="Data Source=DESKTOP-4MQAGL7;Initial Catalog=QLTV;Integrated Security=True"/>
     <!--<add key="ConnectionString" value="Data Source=DESKTOP-B4LCQPR;Initial Catalog=QLTV;Integrated Security=True"/>-->
     <add key="MSDGFORMAT"  value="" />
   </appSettings>
