--- a/QLTVDTO/QLTVDTO.vbproj
+++ b/QLTVDTO/QLTVDTO.vbproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocGiaDTO.vb" />
+    <Compile Include="LapPhieuMuonSachDTO.vb" />
     <Compile Include="LoaiDocGiaDTO.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
