--- a/QLTVBUS/QLTVBUS.vbproj
+++ b/QLTVBUS/QLTVBUS.vbproj
@@ -81,6 +81,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="QuyDinhBUS.vb" />
     <Compile Include="SachBUS.vb" />
     <Compile Include="TheLoaiSachBUS.vb" />
   </ItemGroup>
