--- a/QLTVDAL/QLTVDAL.vbproj
+++ b/QLTVDAL/QLTVDAL.vbproj
@@ -82,6 +82,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="QuyDinhDAL.vb" />
     <Compile Include="SachDAL.vb" />
     <Compile Include="TheLoaiSachDAL.vb" />
   </ItemGroup>
