--- a/QLTVDAL/QLTVDAL.vbproj
+++ b/QLTVDAL/QLTVDAL.vbproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocGiaDAL.vb" />
-    <Compile Include="LapPhieuMuonSachDAL.vb" />
+    <Compile Include="PhieuMuonSachDAL.vb" />
     <Compile Include="LoaiDocGiaDAL.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
