--- a/QLTVBUS/QLTVBUS.vbproj
+++ b/QLTVBUS/QLTVBUS.vbproj
@@ -63,6 +63,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaoCaoTinhHinhMuonSachTheoTheLoaiBUS.vb" />
     <Compile Include="ChiTietPhieuMuonSachBUS.vb" />
     <Compile Include="DocGiaBUS.vb" />
     <Compile Include="PhieuMuonSachBUS.vb" />
