--- a/QLTVGUI/QLTVGUI.vbproj
+++ b/QLTVGUI/QLTVGUI.vbproj
@@ -89,6 +89,12 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmBaoCaoTinhHinhMuonSachTheoTheLoai.Designer.vb">
+      <DependentUpon>frmBaoCaoTinhHinhMuonSachTheoTheLoai.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmBaoCaoTinhHinhMuonSachTheoTheLoai.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmLapPhieuMuonSach.Designer.vb">
       <DependentUpon>frmLapPhieuMuonSach.vb</DependentUpon>
     </Compile>
@@ -199,6 +205,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmBaoCaoTinhHinhMuonSachTheoTheLoai.resx">
+      <DependentUpon>frmBaoCaoTinhHinhMuonSachTheoTheLoai.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLapPhieuMuonSach.resx">
       <DependentUpon>frmLapPhieuMuonSach.vb</DependentUpon>
     </EmbeddedResource>
